[package]
name = "wasm-universe"
version = "0.1.0"
authors = ["synul <synul@mailbox.org>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.20"
wasm-bindgen = "0.2.43"
rand = { version = "0.6.5", features = ["wasm-bindgen"] }
libmath = "0.2.1"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'console',
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'HtmlDivElement',
  'HtmlElement',
  'HtmlParagraphElement',
  'Node',
  'Window',
]
