[package]
name = "liniverse"
version = "0.3.0"
authors = ["synul <synul@mailbox.org>"]
description = "A (mostly) accurate simulation of gravitational forces between bodies in space."
license = "UNLICENSED"
repository = "https://gitlab.com/synul/liniverse"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.43"
rand = { version = "0.6.5", features = ["wasm-bindgen"] }
uuid = { version = "0.8.1", features = ["v4", "wasm-bindgen"] }

[dependencies.web-sys]
version = "0.3.4"
features = [
  'console',
  'CanvasRenderingContext2d',
  'Document',
  'DomRect',
  'DomRectReadOnly',
  'Element',
  'EventTarget',
  'HtmlCanvasElement',
  'HtmlDivElement',
  'HtmlElement',
  'HtmlParagraphElement',
  'MouseEvent',
  'Node',
  'Performance',
  'Window',
]
